Сервис с метриками